improve state handling and fix potential NPEs in MessageMetaDataProducer